--- a/indexl.html
+++ b/indexl.html
@@ -57,7 +57,7 @@
     <p>如題2所答，儘管沒有成為純工程師，將程式能力結合過去所學，都有機會有驚喜的結果。</p>
   </ol>
   <h2>如果參與這個計畫，會怎麼安排學習時間？</h2>
-  <p>目前的兼職工作為排班制，目前是固定每週白天上班，下班時間固定，週間晚上都至少可以安排三小時的學習時間，扣除訓練內容消化以及外務，一週應可有30~35小時可供運用。關於第三階段每週五的實體活動，如提早確認時間，應可排班勁量參與！</p>
+  <p>目前的兼職工作為排班制，目前是固定每週白天上班，下班時間固定，週間晚上都至少可以安排三小時的學習時間，扣除訓練內容消化以及外務，一週應可有30~35小時可供運用。關於第三階段每週五的實體活動，如提早確認時間，應可排班參與！</p>
   <h2>如果參與這個計畫，預期會碰到什麼困難？你打算怎麼解決它？</h2>
   <p>目前可預期最大的困難會是：全部！（哈哈哈哈）</p>
   <p>以過去學習外語、繪圖軟體的經驗來說，我覺得了解理論後再加上大量實作熟悉，就可以慢慢上手。理論知識補充除了上網搜尋相關之外，我會使用相關書籍。書籍和程式、套件本身的Documentation，脈絡較完整，比較有效解決問題。</p>
